--- a/davecx/static/sass/style.scss
+++ b/davecx/static/sass/style.scss
@@ -45,6 +45,7 @@ section.posts {
 		background: white;
 		box-shadow: $simple-shadow;
 		padding: 0px 10px;
+		margin-top: -20px;
 	}
 }
 
